// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog should render correctly primary in dark 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "space-evenly",
      }
    }
  >
    <View
      style={
        {
          "width": "50%",
        }
      }
    >
      <View
        accessibilityLabel="Button One"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "rgba(0, 122, 255, 1)",
            "borderRadius": 12,
            "borderWidth": 2,
            "justifyContent": "center",
            "minHeight": 40,
            "opacity": 1,
            "textColor": "rgba(0, 122, 255, 1)",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "black",
                "fontFamily": "SFProText-Regular",
                "fontSize": 16,
                "fontWeight": "bold",
              },
              {
                "color": "rgba(0, 122, 255, 1)",
              },
              {
                "lineHeight": 24,
              },
            ]
          }
        >
          Button One
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "width": "50%",
        }
      }
    >
      <View
        accessibilityLabel="Button Two"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "rgba(0, 122, 255, 1)",
            "borderRadius": 12,
            "justifyContent": "center",
            "minHeight": 40,
            "opacity": 1,
            "textColor": "white",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "black",
                "fontFamily": "SFProText-Regular",
                "fontSize": 16,
                "fontWeight": "bold",
              },
              {
                "color": "white",
              },
              {
                "lineHeight": 24,
              },
            ]
          }
        >
          Button Two
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Dialog should render correctly primary in light 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "space-evenly",
      }
    }
  >
    <View
      style={
        {
          "width": "50%",
        }
      }
    >
      <View
        accessibilityLabel="Button One"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "rgba(0, 122, 255, 1)",
            "borderRadius": 12,
            "borderWidth": 2,
            "justifyContent": "center",
            "minHeight": 40,
            "opacity": 1,
            "textColor": "rgba(0, 122, 255, 1)",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "black",
                "fontFamily": "SFProText-Regular",
                "fontSize": 16,
                "fontWeight": "bold",
              },
              {
                "color": "rgba(0, 122, 255, 1)",
              },
              {
                "lineHeight": 24,
              },
            ]
          }
        >
          Button One
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "width": "50%",
        }
      }
    >
      <View
        accessibilityLabel="Button Two"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "rgba(0, 122, 255, 1)",
            "borderRadius": 12,
            "justifyContent": "center",
            "minHeight": 40,
            "opacity": 1,
            "textColor": "white",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "black",
                "fontFamily": "SFProText-Regular",
                "fontSize": 16,
                "fontWeight": "bold",
              },
              {
                "color": "white",
              },
              {
                "lineHeight": 24,
              },
            ]
          }
        >
          Button Two
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Dialog should render correctly secondary in dark 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "gap": 8,
      }
    }
  >
    <View
      accessibilityLabel="Button One"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "rgba(0, 122, 255, 1)",
          "borderRadius": 12,
          "borderWidth": 2,
          "justifyContent": "center",
          "minHeight": 40,
          "opacity": 1,
          "textColor": "rgba(0, 122, 255, 1)",
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "black",
              "fontFamily": "SFProText-Regular",
              "fontSize": 16,
              "fontWeight": "bold",
            },
            {
              "color": "rgba(0, 122, 255, 1)",
            },
            {
              "lineHeight": 24,
            },
          ]
        }
      >
        Button One
      </Text>
    </View>
    <View
      accessibilityLabel="Button Two"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "rgba(0, 122, 255, 1)",
          "borderRadius": 12,
          "borderWidth": 2,
          "justifyContent": "center",
          "minHeight": 40,
          "opacity": 1,
          "textColor": "rgba(0, 122, 255, 1)",
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "black",
              "fontFamily": "SFProText-Regular",
              "fontSize": 16,
              "fontWeight": "bold",
            },
            {
              "color": "rgba(0, 122, 255, 1)",
            },
            {
              "lineHeight": 24,
            },
          ]
        }
      >
        Button Two
      </Text>
    </View>
    <View
      accessibilityLabel="Button Three"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(0, 122, 255, 1)",
          "borderRadius": 12,
          "justifyContent": "center",
          "minHeight": 40,
          "opacity": 1,
          "textColor": "white",
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "black",
              "fontFamily": "SFProText-Regular",
              "fontSize": 16,
              "fontWeight": "bold",
            },
            {
              "color": "white",
            },
            {
              "lineHeight": 24,
            },
          ]
        }
      >
        Button Three
      </Text>
    </View>
  </View>
</View>
`;

exports[`Dialog should render correctly secondary in light 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "gap": 8,
      }
    }
  >
    <View
      accessibilityLabel="Button One"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "rgba(0, 122, 255, 1)",
          "borderRadius": 12,
          "borderWidth": 2,
          "justifyContent": "center",
          "minHeight": 40,
          "opacity": 1,
          "textColor": "rgba(0, 122, 255, 1)",
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "black",
              "fontFamily": "SFProText-Regular",
              "fontSize": 16,
              "fontWeight": "bold",
            },
            {
              "color": "rgba(0, 122, 255, 1)",
            },
            {
              "lineHeight": 24,
            },
          ]
        }
      >
        Button One
      </Text>
    </View>
    <View
      accessibilityLabel="Button Two"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "rgba(0, 122, 255, 1)",
          "borderRadius": 12,
          "borderWidth": 2,
          "justifyContent": "center",
          "minHeight": 40,
          "opacity": 1,
          "textColor": "rgba(0, 122, 255, 1)",
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "black",
              "fontFamily": "SFProText-Regular",
              "fontSize": 16,
              "fontWeight": "bold",
            },
            {
              "color": "rgba(0, 122, 255, 1)",
            },
            {
              "lineHeight": 24,
            },
          ]
        }
      >
        Button Two
      </Text>
    </View>
    <View
      accessibilityLabel="Button Three"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(0, 122, 255, 1)",
          "borderRadius": 12,
          "justifyContent": "center",
          "minHeight": 40,
          "opacity": 1,
          "textColor": "white",
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "black",
              "fontFamily": "SFProText-Regular",
              "fontSize": 16,
              "fontWeight": "bold",
            },
            {
              "color": "white",
            },
            {
              "lineHeight": 24,
            },
          ]
        }
      >
        Button Three
      </Text>
    </View>
  </View>
</View>
`;
